--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,8 @@
         "xtree": "cpp",
         "xutility": "cpp",
         "algorithm": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "forward_list": "cpp",
+        "array": "cpp"
     },
 }
