--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,7 @@
         "algorithm": "cpp",
         "unordered_set": "cpp",
         "forward_list": "cpp",
-        "array": "cpp"
+        "array": "cpp",
+        "deque": "cpp"
     },
 }
